--- a/app/views/create_post.erb
+++ b/app/views/create_post.erb
@@ -1,11 +1,14 @@
-<h1>Craigslist Jr.</h1>
-<h2>Create Post on Category: <%=@category.name%></h2>
+<div class="container">
+	
+	<h1>Craigslist Jr.</h1>
+	<h2>Create Post on Category: <%=@category.name%></h2>
 
-<form action="/:category_id/new" method="POST">
-  <label for="post_title">Title: </label>
-  <input type="text" name="post_title" id="post_title">
-  <label for="post_content">Content: </label>
-  <input type="text" name="post_content" id="post_content">
-  <input style="display: none" type="text" name="category_id" value="<%= @category.id %>"></input>
-  <input type="submit">
-</form>
+	<form action='/posts'method="POST">
+	  <label for="post_name">Title: </label>
+	  <input type="text" name="post[title]" id="post_name">
+	  <label for="post_text">Content: </label><br>
+	  <textarea name="post[content]" id="post_text"></textarea>
+	  <input style="display: none" type="text" name="post[category_id]" value="<%=@id%>">
+	  <input type="submit">
+	</form>
+</div>
