--- a/app/views/edit_post.erb
+++ b/app/views/edit_post.erb
@@ -1,6 +1,8 @@
-<h2>Change the content: </h2>
-<form action="/:category_id/new" method="POST">
-  <label for="post_content">New Content: </label>
-  <input type="text" name="content" id="post_content">
-  <input type="submit">
-</form>
+<div class="container">
+	<h2>Change the content: </h2>
+	<form action="/post/edit" method="POST">
+	  <label for="post_content">New Content: </label>
+	  <textarea name="content" id="post_content"><%=@post.content%></textarea>
+	  <input type="submit">
+	</form>
+</div>
