--- a/app/views/new_category.erb
+++ b/app/views/new_category.erb
@@ -1,5 +1,7 @@
-<form action="/new_category" method="POST">
-  <label for="category_name">Name:</label>
-  <input type="text" name="name" id="category_name">
-  <input type="submit">
-</form>
+<div class="container">
+	<form action="/new_category" method="POST">
+	  <label for="category_name">Name:</label>
+	  <input type="text" name="name" id="category_name">
+	  <input type="submit">
+	</form>
+</div>
