Doing user auth stuff

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,10 +1,7 @@
 <div class="container">
-  <h1>Welcome to Craigslist Jr!</h1>
-  <h2>Categories are:</h2>
-  <ul>
-    <%Category.all.each do |field|%>
-      <li><a href="/<%=field.id %>"><%=field.name%></a></li>
-    <%end%>
-  </ul>
-  <a href="/new_category">Create Category</a>
+  <h1>Reddit Jr.</h1>
+
+  <%@posts.each do |post|%>
+    <h2><a href='/<%=post.id%>'><%=post.title%></a></h2>
+  <%end%>
 </div>
