--- a/app/views/post.erb
+++ b/app/views/post.erb
@@ -1,7 +1,3 @@
-<h1><%=@post.title%></h1>
-
-<h3><%=@post.content%></h3>
-
-<a href="/">Home</a>
-
-<a href="/<%=@post.id%>/edit">Edit this Post</a>
+<div class="container">
+  <%=@post.content%>
+</div>
