--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- 
+  <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
@@ -18,6 +18,18 @@
   <title></title>
 </head>
 <body>
+  <ul class="top-nav">
+    <li><a href="/">Home</a></li>
+    <li><a href="/create_post">New Post</a></li>
+
+    <%if session[:current_user]%>
+      <li><a href='/profile/session[:current_user]'>Profile Page</a></li>
+    <%else%>
+      <li><a href="/login">Login/Create User</a></li>
+    <%end%>
+  </ul>
+  <br>
+  <br>
   <%= yield %>
 </body>
 </html>
