--- a/public/css/application.css
+++ b/public/css/application.css
@@ -4,6 +4,28 @@
   padding: 0px 20px 20px 20px;
   border: 1px dotted black;
 }
+
+.top-nav {
+  top: 0;
+  width: 100%;
+  position: fixed;
+  margin-top: 0px;
+  padding-top: 0px;
+
+  display: block;
+  background-color: red;
+}
+
+.top-nav li{
+  display: inline-block;
+  margin: 10px 30px;
+}
+
+.top-nav li:last-child{
+  float: right;
+  padding-right: 20px;
+}
+
 th {
   text-align: left;
 }
