--- a/app/views/post.erb
+++ b/app/views/post.erb
@@ -1,3 +1,14 @@
 <div class="container">
-  <%=@post.content%>
+  <h2><%=@post.title%></h2>
+    <p><%=@post.content%><p>
+
+  <h4>Comments</h4>
+  <%if session[:current_user]%>
+    <form action='/post/@post.id/add_comment' method="POST">
+      <textarea name="content" placeholder="Write stuff here"></textarea>
+      <input type="submit" value="Add Comment">
+    </form>
+  <%end%>
+
+
 </div>
