Added profile page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>Reddit Jr.</h1>
 
-  <%@posts.each do |post|%>
-    <div class="post"><h2><a href='/post/<%=post.id%>'><%=post.title%></a></h2><p><a href='<%=post.link%>'><%=post.link%></a><p></div>
+  <%@posts.each_with_index do |post, index|%>
+    <div class="post"><h2><%="#{index + 1}.  "%><a href='/post/<%=post.id%>'><%=post.title%></a></h2><p><a class="post-url" href='<%=post.link%>'><%=post.link%></a><p></div>
   <%end%>
 </div>
