--- a/app/views/post.erb
+++ b/app/views/post.erb
@@ -1,14 +1,20 @@
 <div class="container">
-  <h2><%=@post.title%></h2>
+  <h2><%=@post.title%>  -- <a href="<%=@post.link%>"><%=@post.link%></a></h2>
     <p><%=@post.content%><p>
+    <p><%=@post.comments.count%> comments</p>
 
   <h4>Comments</h4>
   <%if session[:current_user]%>
-    <form action='/post/@post.id/add_comment' method="POST">
+    <form action='/post/<%=@post.id%>/add_comment' method="POST">
       <textarea name="content" placeholder="Write stuff here"></textarea>
       <input type="submit" value="Add Comment">
     </form>
   <%end%>
+  <%@post.comments.all.each do |comment|%>
+    <p><span class='comment-user_name'>
+      <a href="/profile/<%=comment.user.id%>">
+      <%=comment.user.user_name%></a></span> -- <%=comment.content%></p>
 
+  <%end%>
 
 </div>
