made front page prettier

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,6 +2,11 @@
   <h1>Reddit Jr.</h1>
 
   <%@posts.each_with_index do |post, index|%>
-    <div class="post"><h2><%="#{index + 1}.  "%><a href='/post/<%=post.id%>'><%=post.title%></a></h2><p><a class="post-url" href='<%=post.link%>'><%=post.link%></a><p></div>
+    <div class="post"><h2><%="#{index + 1}.  "%><a href='/post/<%=post.id%>'><%=post.title%></a></h2><p><a class="post-url" href='<%=post.link%>'><%=post.link%></a>
+      <p>
+      <p><%=post.comments.count%> comments -- <%=post.created_at%></p>
+      </div>
   <%end%>
+
+  <!-- <a href="/number">Next</a> -->
 </div>
