working on ajax

--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -4,7 +4,7 @@
   <%else%>
     <h1><%=@user.user_name%></h1>
     <p><%=@user.about%></p>
-    <a href="#">Comments</a><br><br>
-    <a href="#">Posts</a>
+    <a id="profile_comments" href="#">Comments</a><br><br>
+    <a id="profile_posts" href="#">Posts</a>
   <%end%>
 </div>
